--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>O Portal do Inventor Maluco</title>
+    <title>Blue Future</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="site-container">
         <header class="site-header text-center">
-            <h1>O Portal do Inventor Maluco</h1>
+            <h1>Blue Future</h1>
         </header>
 
         <nav class="site-nav">
