--- a/index.html
+++ b/index.html
@@ -222,5 +222,6 @@
             O Portal do Inventor Maluco - Todos os direitos reservados
         </footer>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
