--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
         <nav class="site-nav">
             <ul class="nav-list">
 
-                <li><a href="#gallery">Monitoramento marinho</a></li>
-                <li><a href="#tutorials">Tutoriais DIY</a></li>
-                <li><a href="#ask-inventor">Pergunte ao Inventor</a></li>
-                <li><a href="#epic-fails">Falhas Épicas</a></li>
-                <li><a href="#news">Novidades</a></li>
-                <li><a href="#ranking">Ranking</a></li>
+                <li><a href="#monitoramento">Monitoramento marinho</a></li>
+                <li><a href="#nós">Sobre nós</a></li>
+                <li><a href="#serviços">Nossos serviços</a></li>
+                <li><a href="#objetivo">Objetivos: Preservação e proteção dos oceanos</a></li>
+                <li><a href="#news">Noticias</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </nav>
 
         <div class="content">
-            <section id="gallery" class="gallery section">
+            <section id="monitotamento" class="gallery section">
                 <h2 class="section-title">Galeria de Invenções</h2>
                 <h1> Snout Snuggy </h1>
                 <div class="row">
