--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
         </nav>
 
         <div class="content">
-            <section id="monitotamento" class="gallery section">
-                <h2 class="section-title">Galeria de Invenções</h2>
+            <section id="monitotamento" class="Monitoramento marinhon">
+                <h2 class="section-title">Monitoramento marinho</h2>
                 <h1> Snout Snuggy </h1>
                 <div class="row">
                     <div class="column">
@@ -101,8 +101,8 @@
                 </div>
             </section>
 
-            <section id="tutorials" class="tutorials section">
-                <h2 class="section-title">Tutoriais DIY</h2>
+            <section id="nós" class="Sobre nós">
+                <h2 class="section-title">Sobre nós</h2>
                 <div class="row">
                     <div class="column">
                         <p>Peças engraçadas e truques de mágica para chocar seus amigos!</p>
@@ -121,14 +121,14 @@
                 </div>
             </section>
 
-            <section id="ask-inventor" class="ask-inventor section">
-                <h2 class="section-title">Pergunte ao Inventor</h2>
+            <section id="Nossos serviços" class="Nossos serviços section">
+                <h2 class="section-title">Nossos serviços</h2>
                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfuVZtLxGSbbZp2KZTFwViH2uPjk22QF1sQ7CuH_OKVsrgkjg/viewform?embedded=true"
                 width="100%" height="550" frameborder="0" marginheight="0" marginwidth="0">Carregando…</iframe>
             </section>
 
-            <section id="epic-fails" class="epic-fails section">
-                <h2 class="section-title">Falhas Épicas</h2>
+            <section id="objetivo" class="objetivo">
+                <h2 class="section-title">Objetivos: Preservação e proteção dos oceanos</h2>
                 <div class="row">
                     <div class="column-third">
                         <h3>Gorro de dedo</h3>
@@ -153,8 +153,8 @@
                 </div>
             </section>
 
-            <section id="news" class="news section">
-                <h2 class="section-title">Novidades</h2>
+            <section id="news" class="noticias">
+                <h2 class="section-title">Noticias</h2>
                 <div class="row">
                     <div class="column-third">
                         <h2>Cone giratório para sorvete</h2>
@@ -176,8 +176,8 @@
                 </div>
             </section>
 
-            <section id="ranking" class="ranking section">
-                <h2 class="section-title">Ranking das Invenções</h2>
+            <section id="contato" class="Contato">
+                <h2 class="section-title">Contato</h2>
                 <div class="table-responsive">
                     <table class="table table-dark table-hover">
                         <thead>
