--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
 
         <footer class="site-footer text-center">
-            O Portal do Inventor Maluco - Todos os direitos reservados
+            Monitoramento marinho - Todos os direitos reservados
         </footer>
     </div>
     <script src="script.js"></script>
