--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <nav class="site-nav">
             <ul class="nav-list">
 
-                <li><a href="#monitoramento">Monitoramento marinho</a></li>
+                <li><a href="#gallery">Monitoramento marinho</a></li>
                 <li><a href="#nós">Sobre nós</a></li>
                 <li><a href="#serviços">Nossos serviços</a></li>
                 <li><a href="#objetivo">Objetivos: Preservação e proteção dos oceanos</a></li>
@@ -25,7 +25,7 @@
         </nav>
 
         <div class="content">
-            <section id="monitotamento" class="Monitoramento marinhon">
+            <section id="gallery" class="Monitoramento marinhon">
                 <h2 class="section-title">Monitoramento marinho</h2>
                 <h1> Snout Snuggy </h1>
                 <div class="row">
