--- a/index.html
+++ b/index.html
@@ -31,6 +31,12 @@
 
             <section id="tutorials" class="tutorials section">
                 <!-- Seção de tutoriais -->
+                <h1>Sobre Nós: Conheça o Nosso Site</h1>
+                <h3>O Nosso Site é uma plataforma dedicada ao monitoramento marinho,
+                    criada com o objetivo de promover a conscientização sobre os desafios enfrentados pelos oceanos
+                     e facilitar a gestão sustentável dos recursos marinhos. Nossa equipe é composta por especialistas
+                      em oceanografia, tecnologia e conservação marinha, comprometidos em fornecer dados precisos
+                       e relevantes para ajudar a proteger nossos oceanos para as gerações futuras.      </h3>
             </section>
 
             <section id="ask-scientist" class="ask-scientist section">
