--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 </p>
 
                 <p> Uma das seções mais fascinantes do nosso site é a Galeria de Espécies. Aqui, destacamos algumas das criaturas incríveis que habitam os oceanos. Desde majestosas baleias até pequenos peixes coloridos, cada espécie desempenha um papel vital no equilíbrio do ecossistema marinho. Explore nossa galeria para aprender mais sobre essas fascinantes criaturas e sua importância para o nosso planeta.</p>
+               <h1> Galeria das Espécias </h1>
                 <h1>Tubarão Baleia</h1>
                 <div class="row">
                     <div class="column">
