--- a/index.html
+++ b/index.html
@@ -73,11 +73,34 @@
             <section id="tutorials" class="tutorials section">
                 <!-- Seção de tutoriais -->
                 <h1>Sobre Nós: Conheça o Nosso Site</h1>
-                <h3>O Nosso Site é uma plataforma dedicada ao monitoramento marinho,
+                <p>O Nosso Site é uma plataforma dedicada ao monitoramento marinho,
                     criada com o objetivo de promover a conscientização sobre os desafios enfrentados pelos oceanos
                      e facilitar a gestão sustentável dos recursos marinhos. Nossa equipe é composta por especialistas
                       em oceanografia, tecnologia e conservação marinha, comprometidos em fornecer dados precisos
-                       e relevantes para ajudar a proteger nossos oceanos para as gerações futuras.      </h3>
+                       e relevantes para ajudar a proteger nossos oceanos para as gerações futuras.      <p>
+                
+                <h2>Nossa Missão</h2>       
+                <p>Nossa missão é dupla: educar o público sobre a importância dos oceanos e fornecer ferramentas e dados
+                    para ajudar na conservação marinha. Sabemos que os oceanos enfrentam ameaças crescentes, desde a poluição
+                     até a mudança climática, e acreditamos que a informação é a chave para a ação.<p>       
+                <h2>Nossa Equipe</h2>       
+                <p> Somos uma equipe diversificada de especialistas em oceanografia, tecnologia e conservação marinha. Cada
+                    membro traz uma paixão pela proteção dos oceanos e um compromisso em fornecer dados precisos e relevantes.
+                     Trabalhamos incansavelmente para garantir que as informações disponíveis em nossa plataforma sejam de alta
+                      qualidade e facilmente acessíveis.</p>       
+                <h2>Tecnologias Avançadas</h2>
+                <p>Utilizamos tecnologias de ponta para coletar e analisar dados oceanográficos em tempo real.
+                    Isso nos permite oferecer uma visão abrangente da saúde dos ecossistemas marinhos. As tecnologias
+                     que utilizamos incluem sensores subaquáticos, satélites e algoritmos avançados de análise de dados.</p>       
+                <p>Estamos profundamente empenhados em educar o público sobre os oceanos. Através de campanhas de sensibilização
+                    e programas educativos, buscamos aumentar a conscientização sobre as ameaças aos nossos mares e inspirar ações
+                     positivas. Oferecemos recursos educacionais para escolas, comunidades e indivíduos interessados em aprender
+                      mais sobre a conservação marinha.</p>            
+                <h2>Futuro Sustentável</h2>       
+                <p> Estamos constantemente trabalhando para melhorar nossa plataforma,incorporando novas tecnologias e metodologias
+                 de monitoramento. Nosso objetivo é criar uma ferramenta indispensável para a conservação dos oceanos, ajudando a
+                 garantir um futuro sustentável para todos. Acreditamos que, ao unir forças, podemos proteger os oceanos para as futuras
+                  gerações.</p>             
             </section>
 
             <section id="ask-scientist" class="ask-scientist section">
