--- a/index.html
+++ b/index.html
@@ -92,7 +92,6 @@
             </section>
 
             <section id="tutorials" class="tutorials section">
-                <!-- Seção de tutoriais -->
                 <h1>Sobre Nós: Conheça o Nosso Site</h1>
                 <p> Uma plataforma dedicada ao monitoramento marinho,
                 criada com o objetivo de promover a conscientização sobre os desafios enfrentados pelos oceanos
@@ -131,7 +130,13 @@
             </section>
 
             <section id="news" class="news section">
-                <!-- Seção de notícias -->
+              <h1> Noticias</h1>
+
+                <p> * Novo Recurso de Alertas: Agora, os usuários podem configurar alertas personalizados para mudanças nas condições oceânicas.</p>
+                <p> * Parceria com Instituição de Pesquisa: Nosso Site estabeleceu uma parceria com uma instituição de pesquisa marinha, expandindo nossos dados.</p>
+                <p> * Acesso na Campanha de Conscientização: Nossa campanha ambiental foi um sucesso, envolvendo a comunidade na conservação dos oceanos.</p>
+                <p> * Atualizações na Plataforma: Implementamos melhorias na plataforma para melhor desempenho e usabilidade.</p>
+                <p> * Participação em Conferência Internacional: Nosso Site participou de uma conferência internacional sobre conservação marinha, compartilhando pesquisas e experiências.</p>
             </section>
 
             <section id="ranking" class="ranking section">
