--- a/index.html
+++ b/index.html
@@ -127,6 +127,17 @@
 
             <section id="ask-scientist" class="ask-scientist section">
                 <!-- Seção de pergunte ao cientista -->
+            <h1>Nossos Serviços: O Que Oferecemos</h1>
+            No NossoSite, oferecemos uma variedade de serviços para atender às necessidades de nossos usuários:
+            1.Dados em Tempo Real:Acesse dados atualizados sobre temperatura da água, salinidade, qualidade da água e muito mais.
+            2.Mapas Interativos:Explore mapas interativos para visualizar as condições oceânicas em diferentes regiões do mundo.
+            3.Ferramentas de Análise:Utilize nossas ferramentas avançadas de análise para estudar tendências e padrões nos dados coletados.
+            4.Relatórios Detalhados:Baixe relatórios detalhados para uma análise mais aprofundada das condições do mar.
+              
+
+
+
+
             </section>
 
             <section id="news" class="news section">
