--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav class="site-nav">
             <ul class="nav-list">
                 <li><a href="#gallery">Galeria de Espécies</a></li>
-                <li><a href="#tutorials">Tutoriais de Observação</a></li>
-                <li><a href="#ask-scientist">Pergunte ao Cientista</a></li>
+                <li><a href="#tutorials">Sobre Nós</a></li>
+                <li><a href="#ask-scientist">Nossos Serviços</a></li>
                 <li><a href="#news">Notícias</a></li>
                 <li><a href="#ranking">Ranking de Descobertas</a></li>
                 <li><a href="#contact">Contato</a></li>
