--- a/index.html
+++ b/index.html
@@ -146,9 +146,7 @@
             </section>
 
             <section id="ranking" class="ranking section">
-                                <h1> Monitoramento ambiental do bentos </h1>
-                <iframe width="640" height="360" src="https://eaulas.usp.br/portal/embed-video?idItem=27608&autostart=false" frameborder="0" scrolling="no" allowfullscreen></iframe>         
-                <p> O monitoramento ambiental do bentos é essencial para entender a saúde dos ecossistemas marinhos. Este processo envolve a coleta de dados sobre a diversidade e abundância de organismos que habitam o fundo do mar. Utilizando diversas técnicas, como amostragem por arrasto e observação remota, os cientistas podem avaliar o impacto das atividades humanas, identificar espécies indicadoras e informar políticas de conservação. Embora existam desafios, como a cobertura limitada e a identificação precisa de espécies, o avanço tecnológico oferece perspectivas promissoras para melhorar o monitoramento e a gestão dos ecossistemas bentônicos marinhos.</p>
+                <!-- Seção de ranking -->
             </section>
 
             <section id="contact" class="contact section">
