--- a/index.html
+++ b/index.html
@@ -146,11 +146,16 @@
             </section>
 
             <section id="ranking" class="ranking section">
-                <!-- Seção de ranking -->
+                <h1> Monitoramento ambiental do bentos </h1>
+                <iframe width="640" height="360" src="https://eaulas.usp.br/portal/embed-video?idItem=27608&autostart=false" frameborder="0" scrolling="no" allowfullscreen></iframe>         
+                <p> O monitoramento ambiental do bentos é essencial para entender a saúde dos ecossistemas marinhos. Este processo envolve a coleta de dados sobre a diversidade e abundância de organismos que habitam o fundo do mar. Utilizando diversas técnicas, como amostragem por arrasto e observação remota, os cientistas podem avaliar o impacto das atividades humanas, identificar espécies indicadoras e informar políticas de conservação. Embora existam desafios, como a cobertura limitada e a identificação precisa de espécies, o avanço tecnológico oferece perspectivas promissoras para melhorar o monitoramento e a gestão dos ecossistemas bentônicos marinhos.</p>
             </section>
 
             <section id="contact" class="contact section">
                 <h2 class="section-title">Contato</h2>
+                <P> Tem perguntas ou comentários?</P> 
+                <p>Entre em contato conosco! </p>
+                <p>Estamos aqui para ajudar e valorizamos seu feedback. Você pode nos contatar através do formulário de contato em nosso site ou enviando um e-mail diretamente para nossa equipe. Estamos ansiosos para ouvir de você!</P>
                 <div class="container">
                     <form action="processar_formulario.php" method="POST">
                         <div class="form-group">
