--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <li><a href="#tutorials">Sobre Nós</a></li>
                 <li><a href="#ask-scientist">Nossos Serviços</a></li>
                 <li><a href="#news">Notícias</a></li>
-                <li><a href="#ranking">Ranking de Descobertas</a></li>
+                <li><a href="#ranking">Monitoramento</a></li>
                 <li><a href="#contact">Contato</a></li>
             </ul>
         </nav>
