--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
             <section id="news" class="news section">
               <h1> Noticias</h1>
 
-                <p> * Novo Recurso de Alertas: Agora, os usuários podem configurar alertas personalizados para mudanças nas condições oceânicas.</p>
-                <p> * Parceria com Instituição de Pesquisa: Nosso Site estabeleceu uma parceria com uma instituição de pesquisa marinha, expandindo nossos dados.</p>
-                <p> * Acesso na Campanha de Conscientização: Nossa campanha ambiental foi um sucesso, envolvendo a comunidade na conservação dos oceanos.</p>
-                <p> * Atualizações na Plataforma: Implementamos melhorias na plataforma para melhor desempenho e usabilidade.</p>
-                <p> * Participação em Conferência Internacional: Nosso Site participou de uma conferência internacional sobre conservação marinha, compartilhando pesquisas e experiências.</p>
+                <p> - Novo Recurso de Alertas: Agora, os usuários podem configurar alertas personalizados para mudanças nas condições oceânicas.</p>
+                <p> - Parceria com Instituição de Pesquisa: Nosso Site estabeleceu uma parceria com uma instituição de pesquisa marinha, expandindo nossos dados.</p>
+                <p> - Acesso na Campanha de Conscientização: Nossa campanha ambiental foi um sucesso, envolvendo a comunidade na conservação dos oceanos.</p>
+                <p> - Atualizações na Plataforma: Implementamos melhorias na plataforma para melhor desempenho e usabilidade.</p>
+                <p> - Participação em Conferência Internacional: Nosso Site participou de uma conferência internacional sobre conservação marinha, compartilhando pesquisas e experiências.</p>
             </section>
 
             <section id="ranking" class="ranking section">
