--- a/index.html
+++ b/index.html
@@ -180,5 +180,20 @@
             O Portal do Monitoramento Marinho - Todos os direitos reservados
         </footer>
     </div>
-</body>
+</body
+    <body>
+    <div class="ocean">
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <div class="bubble"></div>
+        <img class="fish" src="https://static.vecteezy.com/system/resources/previews/018/803/464/original/fish-cartoon-icon-png.png" alt="fish">
+        <img class="fish" src="https://static.vecteezy.com/system/resources/previews/018/803/464/original/fish-cartoon-icon-png.png" alt="fish">
+        <img class="fish" src="https://static.vecteezy.com/system/resources/previews/018/803/464/original/fish-cartoon-icon-png.png" alt="fish">
+        <div class="seaweed"></div>
+        <div class="seaweed"></div>
+        <div class="seaweed"></div>
+    </div>
+    <script src="script.js"></script>
 </html>
