--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <div class="site-container">
         <header class="site-header text-center">
             <h1>O Portal do Monitoramento Marinho</h1>
+            <div class="logo">
+                <img src="link_para_sua_imagem" alt="Logo do site">
+            
+        </header>
+            
         </header>
 
         <nav class="site-nav">
