--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <h1>O Portal do Monitoramento Marinho</h1>
             <div class="logo">
                 <img src="link_para_sua_imagem" alt="Logo do site">
+            </div>
             
         </header>
             
