--- a/index.html
+++ b/index.html
@@ -153,9 +153,8 @@
             </section>
 
             <section id="ranking" class="ranking section">
-                <h1> Monitoramento ambiental do bentos </h1>
-                <iframe width="640" height="360" src="https://eaulas.usp.br/portal/embed-video?idItem=27608&autostart=false" frameborder="0" scrolling="no" allowfullscreen></iframe>         
-                <p> O monitoramento ambiental do bentos é essencial para entender a saúde dos ecossistemas marinhos. Este processo envolve a coleta de dados sobre a diversidade e abundância de organismos que habitam o fundo do mar. Utilizando diversas técnicas, como amostragem por arrasto e observação remota, os cientistas podem avaliar o impacto das atividades humanas, identificar espécies indicadoras e informar políticas de conservação. Embora existam desafios, como a cobertura limitada e a identificação precisa de espécies, o avanço tecnológico oferece perspectivas promissoras para melhorar o monitoramento e a gestão dos ecossistemas bentônicos marinhos.</p>
+                <h1> Monitoramento ambiental</h1>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/cC9r0jHF-Fw?si=_IlL3J9PrXRyrBrP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
 
             <section id="contact" class="contact section">
