--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </section>
 
             <section id="ask-scientist" class="ask-scientist section">
-                <!-- Seção de pergunte ao cientista -->
+        
             <h1>Nossos Serviços: O Que Oferecemos</h1>
             No NossoSite, oferecemos uma variedade de serviços para atender às necessidades de nossos usuários:
             1.Dados em Tempo Real:Acesse dados atualizados sobre temperatura da água, salinidade, qualidade da água e muito mais.
@@ -155,6 +155,9 @@
             <section id="ranking" class="ranking section">
                 <h1> Monitoramento ambiental</h1>
                 <iframe width="560" height="315" src="https://www.youtube.com/embed/cC9r0jHF-Fw?si=_IlL3J9PrXRyrBrP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <p> Explore nosso centro de monitoramento da vida marinha em tempo real, onde oferecemos transmissões ao vivo de recifes de coral, cardumes de peixes, tubarões e muito mais. Nossa equipe identifica e cataloga as espécies marinhas e fornece análises detalhadas dos dados coletados. Além disso, promovemos a educação ambiental e incentivamos a participação pública na proteção dos oceanos. Junte-se a nós nessa missão de preservar os tesouros do mar para as futuras gerações!
+
+</p>
             </section>
 
             <section id="contact" class="contact section">
