--- a/index.html
+++ b/index.html
@@ -154,7 +154,9 @@
 
             <section id="ranking" class="ranking section">
                 <h1> Monitoramento ambiental</h1>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/cC9r0jHF-Fw?si=_IlL3J9PrXRyrBrP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                   
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/QCL7VXuO35g?si=zx4Q6gfMakscQwmr&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/VAnZ8lJtBio?si=acjN8hVyIr1rdyjD&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <p> Explore nosso centro de monitoramento da vida marinha em tempo real, onde oferecemos transmissões ao vivo de recifes de coral, cardumes de peixes, tubarões e muito mais. Nossa equipe identifica e cataloga as espécies marinhas e fornece análises detalhadas dos dados coletados. Além disso, promovemos a educação ambiental e incentivamos a participação pública na proteção dos oceanos. Junte-se a nós nessa missão de preservar os tesouros do mar para as futuras gerações!
 
 </p>
