--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
 </body
     <body>
     
-        <div class="Oceon">
+        <div class="Ocean">
             
                <style> 
                 body {
