--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
         </footer>
     </div>
 </body
-    <body>
+<body>
     <div class="ocean">
         <div class="bubble"></div>
         <div class="bubble"></div>
@@ -194,6 +194,7 @@
         <div class="seaweed"></div>
         <div class="seaweed"></div>
         <div class="seaweed"></div>
-    </div>
+    </div> 
+</body>
     <script src="script.js"></script>
 </html>
